# picseye

./: .gitmodules  README.md
clj_server/: CMakeLists.txt  pom.xml
clj_server/src/main/clojure/pics/: core.clj
clj_server/src/main/java/com/pics/: PicsClient.java  ServiceNotAvailableException.java
clj_server/src/main/jni/: PicsClient.cpp
cpp_client/: CMakeLists.txt  Client.cpp  Client.hpp
cpp_common/: MatchRequest.hpp  MatchResponse.hpp  common.hpp  types.hpp
cpp_server/: CMakeLists.txt  HammingDistancePolicy.h  MatchService.h  main.cpp
ios_client/: Podfile
ios_client/picseye/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
ios_client/picseye/Base.lproj/: Main.storyboard
tools/descriptors_import/: CMakeLists.txt  CSVParser.h  ImportService.h  main.cpp
tools/local_pics_tester/: CMakeLists.txt  main.cpp
tools/pics_fetch/: README.md  project.clj
tools/pics_fetch/doc/: intro.md
tools/pics_fetch/src/pics_fetch/: core.clj
tools/pics_fetch/test/pics_fetch/: core_test.clj
